--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,9 +40,9 @@
 </style>
 
 <body>
-  <div class="loader" title="4">Hold On ...</div>
+  <div class="loader" title="Loading...">Hold On ...</div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <div id="app"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
